<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/currentStop"
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/destinationStop"
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromText"
                android:text="@string/fromText"
                android:gravity="right"
                android:layout_weight="0.9"
                style="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dividerText"
                android:gravity="center"
                android:textColor="#fa0313"
                android:layout_weight="0.2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toText"
                android:text="@string/toText"
                android:gravity="left"
                android:layout_weight="0.9"
                style="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/fullImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/full_icon" />

                <Spinner
                    android:id="@+id/fullSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/fullBtnText"
                    android:layout_gravity="center_vertical"
                    android:textSize="60dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/halfImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/half_icon" />

                <Spinner
                    android:id="@+id/halfSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/halfBtnText"
                    android:layout_gravity="center_vertical"
                    android:textSize="60sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/studentImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/student_icon" />

                <Spinner
                    android:id="@+id/studentSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/studentBtnText"
                    android:layout_gravity="center_vertical"
                    android:textSize="60sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/rsSymbol"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fareText"
                android:text="@string/zero"
                android:layout_marginLeft="@dimen/margin_tiny"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/printBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printBtnText"
            android:background="@drawable/print_btn_selector"
            android:layout_weight="1"
            android:height="@dimen/list_item_height"/>

        <Button
            android:id="@+id/tickitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tickitBtnText"
            android:background="@drawable/tickit_btn_selector"
            android:layout_weight="1"
            android:height="@dimen/list_item_height"/>

    </LinearLayout>

</RelativeLayout>